--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "require": {
     "php": ">=5.4.0",
     "yiisoft/yii2": "*",
-    "sentry/sentry": "~0.10"
+    "sentry/sentry": "*"
   },
   "autoload": {
     "psr-4": {
